...
    private func CredentialsForm() -> some View {
        VStack {
            Text("To Log In, enter your\nusername and password")
                .font(Font.system(size: 28))
                .fontWeight(.bold)
                .multilineTextAlignment(.center)
            BorderBottomTextField(placeholder: "Username", value: $authViewModel.username)
            BorderBottomTextField(placeholder: "Password", value: $authViewModel.password, isSecure: true)
        }.padding(.horizontal, 40)
            .padding(.top, 70)
    }
    
    private func CallToAction() -> some View {
        VStack {
...
